add some example failure response
