# docs/swagger.json
@@ -1,7 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "contact": {
+            "name": "Muhammad Izzah Aeman",
+            "url": "http://www.izzahaemo.my.id",
+            "email": "izzah.aemo@gmail.com"
+        }
     },
     "paths": {
         "/accessmenu/": {
@@ -205,6 +209,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.Brand"
                         }
+                    },
+                    "400": {
+                        "description": "If Username not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureUser"
+                        }
                     }
                 }
             }
@@ -279,7 +289,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Success"
+                        }
                     }
                 }
             }
@@ -356,10 +369,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "boolean"
-                            }
+                            "$ref": "#/definitions/controllers.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "If the brand not found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureRecord"
                         }
                     }
                 }
@@ -410,6 +426,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.Brand"
                         }
+                    },
+                    "400": {
+                        "description": "If Username cannot using this",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureForbiden"
+                        }
                     }
                 }
             }
@@ -437,10 +459,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Result Login",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controllers.LoginResult"
+                        }
+                    },
+                    "400": {
+                        "description": "If Login Failed",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.LoginFailed"
                         }
                     }
                 }
@@ -676,6 +703,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.Phone"
                         }
+                    },
+                    "400": {
+                        "description": "If Username not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureUser"
+                        }
                     }
                 }
             }
@@ -780,6 +813,12 @@
                 "responses": {
                     "200": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "If the phone not found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureRecord"
+                        }
                     }
                 }
             }
@@ -856,10 +895,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "boolean"
-                            }
+                            "$ref": "#/definitions/controllers.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "If the phone not found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureRecord"
                         }
                     }
                 }
@@ -909,6 +951,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Phone"
+                        }
+                    },
+                    "400": {
+                        "description": "If Username cannot using this",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureForbiden"
                         }
                     }
                 }
@@ -985,6 +1033,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Review"
+                        }
+                    },
+                    "400": {
+                        "description": "If Username not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureUser"
                         }
                     }
                 }
@@ -1082,10 +1136,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "boolean"
-                            }
+                            "$ref": "#/definitions/controllers.Success"
+                        }
+                    },
+                    "400": {
+                        "description": "If the review not found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureRecord"
                         }
                     }
                 }
@@ -1135,6 +1192,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Review"
+                        }
+                    },
+                    "400": {
+                        "description": "If the review not found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.FailureRecord"
                         }
                     }
                 }
@@ -1520,6 +1583,42 @@
         }
     },
     "definitions": {
+        "controllers.FailureForbiden": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "username cannot access this menu"
+                }
+            }
+        },
+        "controllers.FailureRecord": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Record not found!"
+                }
+            }
+        },
+        "controllers.FailureUser": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "username cannot found"
+                }
+            }
+        },
+        "controllers.LoginFailed": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "username or password is incorrect."
+                }
+            }
+        },
         "controllers.LoginInput": {
             "type": "object",
             "required": [
@@ -1531,6 +1630,26 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.LoginResult": {
+            "type": "object",
+            "properties": {
+                "RoleID": {
+                    "type": "string"
+                },
+                "Username": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "userID": {
                     "type": "string"
                 }
             }
@@ -1555,6 +1674,15 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "controllers.Success": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "done"
                 }
             }
         },
